# ESP32-Valve-Controller

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  copy_web_build_to_spiffs.js  esp32_valve_controller.ino  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: index.html.S.DBD5810689634C10.idx  main.c.E6474600BB165BF5.idx  project_elf_src_esp32.c.F9A5145AF5FE2EEC.idx  sdkconfig.h.A8F402E30B79556B.idx  valve_controller.c.2B9E1466C7AAB105.idx  valve_controller.h.088BF78A49734009.idx  valve_model.c.0E0CB5C239A1228A.idx  valve_model.h.00CF0A302936DF04.idx  valve_service.c.74B46103DA5CC07A.idx  valve_service.h.852F5D49A77153DF.idx  (+3 more)
main/: CMakeLists.txt  config_manager.c  main.c
main/managers/: config_manager.c  config_manager.h
managers/: CMakeLists.txt  managers.c  managers.h
managers/config_manager/: config_manager.c  config_manager.h
managers/data_manager/: data_manager.c  data_manager.h
managers/spiffs_manager/: spiffs_manager.c  spiffs_manager.h
scripts/: copy_web_build_to_spiffs.js  upload_web_files.py
spiffs/: config.json  default_config.json
svelte_app/public/: index.html
svelte_app/src/: App.svelte
valves/: CMakeLists.txt
valves/model/: valve_model.c
valves/service/: valve_service.c  valve_service.h
webapi/: CMakeLists.txt
webapi/controllers/: valve_controller.c  valve_controller.h  web_controller.c  web_controller.h
webapi/models/: valve_model.c  valve_model.h
webapi/services/: valve_service.c  valve_service.h
