idf_component_register(
    SRCS
        "spiffs_manager/spiffs_manager.c"
        "config_manager/config_manager.c"
        "data_manager/data_manager.c"
    INCLUDE_DIRS
        "spiffs_manager"
        "config_manager"
        "data_manager"
    REQUIRES
        spiffs
        nvs_flash
        json
)
